fixed a small layout issue with buttons in colums
the text in buttons got moved to the right on small devices.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1954,13 +1954,10 @@ input[type="button"],
   padding: 0 2.25em;
   text-align: center;
   text-decoration: none;
-  white-space: nowrap; }
-  @media (max-width: 933px) {
-    input[type="submit"],
-    input[type="reset"],
-    input[type="button"],
-    .button {
-      padding: 0; } }
+  white-space: nowrap;
+  /*@include breakpoint(phablet) {
+		padding: 0;
+	}*/ }
   @media (max-width: 480px) {
     input[type="submit"],
     input[type="reset"],
@@ -2778,15 +2775,23 @@ body.is-touch #banner {
 .col-2 {
   column-count: 2;
   column-gap: 1vw; }
+  .col-2 > .button {
+    padding: 0; }
 
 .col-3 {
   column-count: 3;
   column-gap: 1vw; }
+  .col-3 > .button {
+    padding: 0; }
 
 .col-4 {
   column-count: 4;
   column-gap: 1vw; }
+  .col-4 > .button {
+    padding: 0; }
 
 .col-5 {
   column-count: 5;
   column-gap: 1vw; }
+  .col-5 > .button {
+    padding: 0; }
