--- a/assets/sass/parts/_button.scss
+++ b/assets/sass/parts/_button.scss
@@ -20,9 +20,9 @@ input[type="button"],
 	text-align: center;
 	text-decoration: none;
 	white-space: nowrap;
-	@include breakpoint(phablet) {
+	/*@include breakpoint(phablet) {
 		padding: 0;
-	}
+	}*/
 	@include breakpoint(mobileonly) {
 		padding: 0;
 	}
